Kind of showing a model from kind of repository, also some editor enhancements, most important of which is edges are movable now

--- a/Repo/Repo.fsproj
+++ b/Repo/Repo.fsproj
@@ -51,6 +51,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="GraphMetametamodel.fs" />
+    <Compile Include="RawMetametamodel.fs" />
     <Compile Include="Repo.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
