--- a/Repo.Tests/packages.config
+++ b/Repo.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="FsUnit" version="2.3.2" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net452" />
 </packages>
