--- a/Repo/Repo.fsproj
+++ b/Repo/Repo.fsproj
@@ -50,11 +50,14 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="GraphMetametamodel.fs" />
-    <Compile Include="RawMetametamodel.fs" />
-    <Compile Include="Repo.fs" />
     <Content Include="packages.config" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="RepoTypes.fs" />
+    <Compile Include="Repo.fs" />
+    <Compile Include="GraphMetametamodel.fs" />
+    <Compile Include="MetamodelOperations.fs" />
+    <Compile Include="RepoImpl.fs" />
+    <Compile Include="RepoFactory.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DotParser">
