--- a/EditorPrototype/EditorPrototype/packages.config
+++ b/EditorPrototype/EditorPrototype/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Accordion" version="1.0.0" targetFramework="net452" />
   <package id="GraphX" version="2.3.6.0" targetFramework="net452" />
+  <package id="Microsoft.Research.DryadLINQ.MSAGL" version="3.0.0.0" targetFramework="net452" />
   <package id="QuickGraphPCL" version="3.6.61114.2" targetFramework="net452" />
   <package id="YAXLib" version="2.14" targetFramework="net452" />
 </packages>
