--- a/MsAglWinFormsEditor/packages.config
+++ b/MsAglWinFormsEditor/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GraphTestPackage" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Research.DryadLINQ.MSAGL" version="3.0.0.1" targetFramework="net452" />
 </packages>
