Added check that all model nodes have their type

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -62,7 +62,8 @@
     <None Include="App.config" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="RepoTests.fs" />
-    <Compile Include="InstanceTest.fs" />
+    <Compile Include="InstanceTests.fs" />
+    <Compile Include="MetametamodelTests.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
