Renamed Restrictions to Constraints + several comments and new LINQ query

--- a/src/EditorPrototype/EditorPrototype.csproj
+++ b/src/EditorPrototype/EditorPrototype.csproj
@@ -75,7 +75,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\ImageLoader.cs" />
     <Compile Include="Models\ValueToImageConverter.cs" />
-    <Compile Include="Restrictions.cs" />
+    <Compile Include="Constraints.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
